# chinese-anki-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  QUICKSTART.md  README.md  TESTING.md  TODO.md  TRANSLATION.md  analyze_coverage.py  config.yaml  main.py  pyproject.toml
anki/: deck_builder.py  preview.py  templates.py
extract/: epub_extractor.py  pdf_extractor.py
process/: cedict_loader.py  hsk_filter.py  known_words.py  pinyin_converter.py  review.py  sentence_translator.py  text_cleaner.py  tokenizer.py  word_selector.py
tests/: __init__.py  test_argos_backend.py  test_cedict_loader.py  test_chinese_utils.py  test_cloze_cards.py  test_deck_builder.py  test_epub_extractor.py  test_hsk_filter.py  test_hymt_backend.py  test_integration.py  test_known_words.py  test_main.py  test_nllb_backend.py  test_pdf_extractor.py  test_pinyin_converter.py  test_preview.py  test_repo_health.py  test_review.py  test_sentence_audio.py  test_sentence_translator.py  test_text_cleaner.py  test_tokenizer.py  test_translation_manager.py  test_tts.py  test_word_selector.py
translate/: __init__.py  argos_backend.py  base.py  cedict_backend.py  hymt_backend.py  manager.py  nllb_backend.py
tts/: gtts_generator.py
utils/: chinese_utils.py  file_utils.py
