[project]
name = "anki-chinese-deck"
version = "0.1.0"
description = "Generate Anki flashcards for learning Chinese from EPUB and PDF books"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jieba>=0.42.1",
    "pypinyin>=0.51.0",
    "genanki>=0.13.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "argostranslate>=1.11.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
tts = [
    "gtts>=2.5.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
anki-chinese = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extract", "process", "tts", "anki", "utils"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
