[project]
name = "anki-chinese-deck"
version = "0.5.0"
description = "Generate Anki flashcards for learning Chinese from EPUB and PDF books"
readme = "README.md"
# Capped below 3.14: the Argos Translate neural backend is incompatible with
# 3.14+. CC-CEDICT fallback works everywhere, but we keep the good backend
# installable. See translate/argos_backend.py.
requires-python = ">=3.9,<3.14"
dependencies = [
    "jieba>=0.42.1",
    "pypinyin>=0.51.0",
    "genanki>=0.13.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "argostranslate>=1.11.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
tts = [
    "gtts>=2.5.0",
]
# Higher-quality offline translation via NLLB-200 on CTranslate2.
# ctranslate2 itself comes in transitively through argostranslate.
nllb = [
    "transformers>=4.40.0",
    "huggingface_hub>=0.23.0",
]
# Highest-quality offline translation: Tencent HY-MT1.5 (WMT25-winning line)
# as a GGUF model on llama.cpp. ~1GB download for the default 1.8B Q4_K_M.
hymt = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.23.0",
]

[project.scripts]
anki-chinese = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# main.py must ship too: [project.scripts] anki-chinese = "main:main".
only-include = ["main.py", "extract", "process", "translate", "tts", "anki", "utils"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

# Single source of truth for dev tooling (uv installs this group by default).
# An older [project.optional-dependencies].dev with conflicting pins is gone.
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
